02-rs.yml

apiVersion: v1
kind: Pod
metadata:
  name: nginx-1
  labels:
    app: guestbook
    tier: frontend
spec:
  containers:
    - name: nginx
      image: nginx:1.19
      ports:
        - containerPort: 80
