09-secrets.yml
apiVersion: v1
kind: Pod
metadata:
  name: sc-demo-1
spec:
  containers:
    - name: debug
      image: rkalluru/debug
---
apiVersion: v1
kind: Pod
metadata:
  name: sc-demo-2
spec:
  containers:
    - name: debug
      image: rkalluru/debug
