15-hpa.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa-15
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 1%
      maxUnavailable: 1%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: hpa
          image: rkalluru/debug:hpa
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 200m
              memory: 1000Mi
