18-node-selector.yml
apiVersion: v1
kind: Pod
metadata:
  name: node-selector-18
  labels:
    env: test
spec:
  containers:
    - name: nginx
      image: nginx
      imagePullPolicy: IfNotPresent
#   nodeSelector:
#     disktype: ssd
