13-network-policy.yml
## Without Network Policy
apiVersion: v1
kind: Pod
metadata:
  name: nginx-13-np
  labels:
    podName: nginx-13-np
    appName: nginx
spec:
  containers:
    - name: nginx
      image: nginx:1.19
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-13-np
spec:
  selector:
    podName: nginx-13-np
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: debug-13-np
  labels:
    podName: debug-13-np
spec:
  containers:
    - name: debug
      image: rkalluru/debug
---
apiVersion: v1
kind: Pod
metadata:
  name: debug1-13-np
  labels:
    podName: debug1-13-np
spec:
  containers:
    - name: debug
      image: rkalluru/debug

## With Network Policy restricting from same namespace,
# Example: Restrict everything
---
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: default-deny-ingress
# spec:
#   podSelector: {}
#   policyTypes:
#   - Ingress

# Example: Allow only debug1
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-debug1
spec:
  podSelector:
    matchLabels:
      appName: nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              nname: example
        - podSelector:
            matchLabels:
              podName: debug1-13-np
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    nname: example
  name: example
---
apiVersion: v1
kind: Pod
metadata:
  name: debug1-13-np
  namespace: example
  labels:
    podName: debug1-13-np
spec:
  containers:
    - name: debug
      image: rkalluru/debug
